--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,53 +4,67 @@
     <meta charset="UTF-8">
     <title>Customer Registration</title>
     <link href="app.css" rel="stylesheet"/>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
 <h1>Subscription API</h1>
-<button id=fetchSubscriptionsButton">Get All Subscriptions</button>
-<div id="subscriptions"></div>
+<button id="fetchSubscriptionsButton">Get All Subscriptions</button>
 
-<form id="subscriptionRegistration">
+<div id="subscriptions">
+    <div class="form-group" style="margin-bottom:0.5em;">
+        <input type="text" id="filterInput" placeholder="Search by name, email, or phone..." style="width:100%;padding:0.7em;border-radius:0.5em;border:1px solid #d1d5db;font-size:1em;">
+    </div>
+</div>
+
+<form id="subscriptionRegistration" autocomplete="off" novalidate>
     <div class="form-group">
-        <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname" >
+        <label for="firstname">First Name</label>
+        <input type="text" id="firstname" name="firstname" placeholder="Enter your first name" required>
         <span class="validation-message" id="firstname-validation">First name is required.</span>
     </div>
     <div class="form-group">
-        <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="lastname" >
+        <label for="lastname">Last Name</label>
+        <input type="text" id="lastname" name="lastname" placeholder="Enter your last name" required>
         <span class="validation-message" id="lastname-validation">Last name is required.</span>
     </div>
     <div class="form-group">
-        <label for="email" class="backgroundOrange textBlue">Email:</label>
-        <input type="email" id="email" name="email" >
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
         <span class="validation-message" id="email-validation">Email is required.</span>
     </div>
     <div class="form-group">
-        <label for="phonenumber">Phone Number:</label>
-        <input type="tel" id="phonenumber" name="phonenumber">
+        <label for="phonenumber">Phone Number</label>
+        <input type="tel" id="phonenumber" name="phonenumber" placeholder="Enter your phone number" required>
+        <span class="validation-message" id="phonenumber-validation">Phone number is required.</span>
     </div>
     <div class="form-group">
-        <label>Subscription Type:</label>
-        <input type="radio" id="lite" name="subscription" value="lite">
-        <label for="lite">Lite</label>
-        <input type="radio" id="basic" name="subscription" value="basic">
-        <label for="basic">Basic</label>
-        <input type="radio" id="super" name="subscription" value="super">
-        <label for="super">Super</label>
+        <label>Subscription Type</label>
+        <div>
+            <input type="radio" id="lite" name="subscription" value="lite">
+            <label for="lite">Lite</label>
+            <input type="radio" id="basic" name="subscription" value="basic">
+            <label for="basic">Basic</label>
+            <input type="radio" id="super" name="subscription" value="super">
+            <label for="super">Super</label>
+        </div>
     </div>
     <div class="form-group">
-        <label>Select your channels:</label>
-        <input type="checkbox" id="ufc" name="services" value="ufc">
-        <label for="ufc">UFC</label>
-        <input type="checkbox" id="hbo" name="services" value="hbo">
-        <label for="hbo">HBO</label>
-        <input type="checkbox" id="netflix" name="services" value="netflix">
-        <label for="netflix">Netflix</label>
+        <label>Select your channels</label>
+        <div>
+            <input type="checkbox" id="ufc" name="services" value="ufc">
+            <label for="ufc">UFC</label>
+            <input type="checkbox" id="hbo" name="services" value="hbo">
+            <label for="hbo">HBO</label>
+            <input type="checkbox" id="netflix" name="services" value="netflix">
+            <label for="netflix">Netflix</label>
+        </div>
     </div>
     <input type="submit" value="Register">
+    <input type="button" id="cancelEditBtn" value="Cancel" style="display:none;margin-left:0.5em;background:#e0e0e0;color:#333;">
 </form>
+
+<!-- Edit mode banner -->
+<div id="editBanner" class="success-banner" style="display:none;background:#fff3cd;color:#856404;border-color:#ffeeba;">Editing subscription. Submit to save changes or reset the form to cancel.</div>
 
 </body>
 </html>
